fix for width on ios. fixed icon on me widget. clear option returned to me widget

--- a/Projects/WardAlly/style.css
+++ b/Projects/WardAlly/style.css
@@ -311,7 +311,7 @@ input[type=text]:focus, input[type=number]:focus {
 }
 
 .task-item, .history-item {
-    margin: 1.5em;
+    margin: 0 1.5em 1.5em 1.5em;
     padding-bottom: 1.5em;
     display: flex;
     justify-content: space-between;
@@ -374,12 +374,12 @@ input[type=text]:focus, input[type=number]:focus {
 .widget-expanded {
     z-index: 10;
     position: absolute;
-    width: 100%;
     max-width: 800px;
-    height: calc(100vh - 3em);
+    height: calc(90vh - 3em);
     top:0;
-
-    margin: 10px;
+    left:0;
+    right:0;
+    margin-top: 2.5em;
     
     box-sizing: border-box;
     border-radius: 30px;
@@ -465,7 +465,7 @@ input[type=text]:focus, input[type=number]:focus {
 }
 
 .widget-body {
-    max-height: calc(100vh - 13em);
+    max-height: calc(90vh - 13em);
     overflow-y: auto;
 }
 
